--- a/Chart.yaml
+++ b/Chart.yaml
@@ -6,37 +6,37 @@ version: 0.1.0
 dependencies:
   - alias: source-mariadb
     name: mariadb
-    condition: source.mariadb.enabled
+    condition: source-mariadb.enabled
     version: 14.1.4
     repository: https://charts.bitnami.com/bitnami
 
   - alias: source-mysql
     name: mysql
-    condition: source.mysql.enabled
+    condition: source-mysql.enabled
     version: 9.15.0
     repository: https://charts.bitnami.com/bitnami
 
   - alias: source-postgresql
     name: postgresql
-    condition: source.postgresql.enabled
+    condition: source-postgresql.enabled
     version: 13.2.25
     repository: https://charts.bitnami.com/bitnami
 
   - alias: target-mariadb
     name: mariadb
-    condition: target.mariadb.enabled
+    condition: target-mariadb.enabled
     version: 14.1.4
     repository: https://charts.bitnami.com/bitnami
 
   - alias: target-mysql
     name: mysql
-    condition: target.mysql.enabled
+    condition: target-mysql.enabled
     version: 9.15.0
     repository: https://charts.bitnami.com/bitnami
 
   - alias: target-postgresql
     name: postgresql
-    condition: target.postgresql.enabled
+    condition: target-postgresql.enabled
     version: 13.2.25
     repository: https://charts.bitnami.com/bitnami
 
