--- a/templates/secret-env.yaml
+++ b/templates/secret-env.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "{{ .Release.Name }}-env-{{ .Release.Revision }}"
-  # name: "{{ .Release.Name }}-env"
+  name: "{{ .Release.Name }}-job-{{ .Release.Revision }}-env"
 
 data:
 {{- range $key, $value := .Values.env }}
-  {{ $key }}: {{ $value | b64enc | quote }}
+  {{ $key }}: {{ tpl $value $ | toString | b64enc | quote }}
 {{- end }}
